Fixed pointer flickering on the edge of grid boxes

--- a/013 CSS - Grid Layout With Image Span/style.css
+++ b/013 CSS - Grid Layout With Image Span/style.css
@@ -32,7 +32,7 @@ p {
     grid-gap: 10px;
 }
 
-.grid > div {
+.grid > div > div {
     height: 210px;
     background-size: cover;
     background-attachment: fixed;
@@ -44,7 +44,8 @@ p {
     transition: all 0.5s ease-in;
 }
 
-.grid > div:hover {
+/* When the first div is hovered over, the child div changes */
+.grid > div:hover > div {
     opacity: 0.7;
     /* Transform with background-attachment: fixed; only works properly in Chrome currently */
     /* transform: scale(0.98); */
